--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'mock-xtream-api'
+      - 'xtream-codes-mock-server'
       - '--image=bsogulcan/xtream-codes-mock-server:latest'
       - '--region=us-central1'
       - '--platform=managed'
