--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
       - 'deploy'
       - 'xtream-codes-mock-server'
       - '--image=bsogulcan/xtream-codes-mock-server:latest'
-      - '--region=us-central1'
+      - '--region=europe-west1'
       - '--platform=managed'
       - '--allow-unauthenticated'
       - '--port=8080'
